<resources>
    <string name="app_name">Cloud Coding App</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="groups">Groups</string>
    <string name="projects">Projects</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="string_separator"> ⋅ </string>
    <string name="disconnect">Disconnect</string>
    <string name="token">token</string>
    <string name="me">me</string>
    <string name="date_format">yyyy/MM/dd HH:mm</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
    <string name="user_name" translatable="false">%1$s %2$s</string>
    <string name="username" translatable="false">\@%1$s</string>
    <string name="create_project">Create project</string>
    <string name="visibility">Visibility</string>
    <string name="language">Language</string>
    <string name="comment_html"><![CDATA[<p>%1$s</p>]]></string>
    <string name="joined_groups">Joined Groups</string>
    <string name="owned_groups">Owned Groups</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="profile_picture">profile picture</string>
    <string name="write_message">Write a message</string>
    <string name="send_message">Send message</string>
    <string name="followers_count">%1$d Followers</string>
    <string name="followings_count">%1$d Followings</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="remove_friend">Remove friend</string>
    <string name="deny">Deny</string>
    <string name="received">Received</string>
    <string name="sent">Sent</string>
    <string name="friend_requests">Friend requests</string>
    <string name="members_count">%1$d members</string>
    <string name="members">Members</string>
    <string name="login_continue">Login to continue</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="create_account">Create an account</string>
    <string name="username_str">Username</string>
    <string name="error_login">Error can\'t log you in</string>
    <string name="options">options</string>
    <string name="add_friend">Add friend</string>
    <string name="comments">Comments</string>
    <string name="send_comment">Send a comment</string>
    <string name="confirm_password">Confirm password</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email address</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="users">Users</string>
    <string name="have_no_account">Don\'t have an account?</string>
    <string name="have_an_account">Already have an account?</string>
</resources>