<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profile_picture" />

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />

    <ImageButton
        android:id="@+id/friend_button"
        android:layout_margin="10dp"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_user_plus"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@id/follow_button"
        app:layout_constraintTop_toBottomOf="@id/profile_picture"
        app:tint="?attr/colorPrimary"
        android:contentDescription="@string/add_friend" />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" />
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#919191"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/string_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"
        android:text="@string/string_separator"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/followers"
        app:layout_constraintTop_toTopOf="@id/followers" />

    <TextView
        android:id="@+id/followings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        app:layout_constraintStart_toEndOf="@id/string_separator"
        app:layout_constraintTop_toBottomOf="@id/username" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/AppTabLayout"
        app:tabTextAppearance="@style/AppTabTextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        app:layout_constraintTop_toBottomOf="@id/followers"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/comments_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/projects_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/projects" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/groups_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groups" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="109dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>